SF Primes/src/objects/Recap__c.object
<CustomObject>
    <fields>
        <fullName>Other_Brands__c</fullName>
        <label>Other Brands</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maserati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PS_Ring_To__c</fullName>
        <inlineHelpText>Ring To Number for PowerSearch.</inlineHelpText>
        <label>PS Ring To</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Hours__c</fullName>
        <label>Parts</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerSearch__c</fullName>
        <label>PowerSearch</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Details__c</fullName>
        <formula>IF(NOT(ISBLANK( Primary_Contact__r.Email )), Primary_Contact__r.Email &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK(Primary_Contact__r.Phone)), Primary_Contact__r.Phone &amp; &quot; (Phone)&quot; &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK( Primary_Contact__r.MobilePhone)), Primary_Contact__r.MobilePhone &amp; &quot; (Mobile)&quot;, &quot;&quot;)</formula>
        <label>Primary Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Mobile__c</fullName>
        <formula>Primary_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Required to complete a Recap.</inlineHelpText>
        <label>Primary Order Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recaps</relationshipLabel>
        <relationshipName>Recaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_or_Secondary_domain2__c</fullName>
        <label>Primary or Secondary domain?</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_or_Secondary_domain3__c</fullName>
        <label>Primary or Secondary domain?</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_or_Secondary_domain4__c</fullName>
        <label>Primary or Secondary domain?</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <inlineHelpText>Field auto populated by the Recap Products added to this Recap.</inlineHelpText>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Purchased__c</fullName>
        <label>Products Purchased</label>
        <picklist>
            <picklistValues>
                <fullName>ProCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSearch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerBrand</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Title__c</fullName>
        <label>Promotion Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_3rdParty__c</fullName>
        <label>Provider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recap_Name__c</fullName>
        <label>Recap Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recap_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recap Project</label>
        <referenceTo>Recap_Project__c</referenceTo>
        <relationshipLabel>Recaps</relationshipLabel>
        <relationshipName>Recaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Site__c</fullName>
        <inlineHelpText>Pick a site with the same design/layout the dealer would like</inlineHelpText>
        <label>Reference Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ring_To_1_Label__c</fullName>
        <label>Ring To 1 Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ring_To_1_Type__c</fullName>
        <label>Ring To 1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toll-Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_2_Label__c</fullName>
        <label>Ring To 2 Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ring_To_2_Type__c</fullName>
        <label>Ring To 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toll-Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_3_Label__c</fullName>
        <label>Ring To 3 Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ring_To_3_Type__c</fullName>
        <label>Ring To 3 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toll-Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_Number_1__c</fullName>
        <label>Ring To Number 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ring_To_Number_2__c</fullName>
        <label>Ring To Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ring_To_Number_3__c</fullName>
        <label>Ring To Number 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Row_1__c</fullName>
        <label>Row 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Row_2__c</fullName>
        <label>Row 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Row_3__c</fullName>
        <label>Row 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SOS_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOS Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_P_Ring_To__c</fullName>
        <inlineHelpText>Ring To Number for Service &amp; Parts.</inlineHelpText>
        <label>S&amp;P Ring To</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Hours__c</fullName>
        <label>Sales</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Hours__c</fullName>
        <label>Service</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Parts__c</fullName>
        <label>Service &amp; Parts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slogan__c</fullName>
        <label>Slogan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Finance_Ring_To__c</fullName>
        <inlineHelpText>Ring To Number for Special Finance.</inlineHelpText>
        <label>Special Finance Ring To</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Finance__c</fullName>
        <label>Special Finance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Sent to IFS is considered the final stage.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Order Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started - Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With IFS - Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recap Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With IFS - Starting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With IFS - Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Number__c</fullName>
        <label>Stock Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <picklist>
            <controllingField>Design__c</controllingField>
            <picklistValues>
                <fullName>Alligator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Pearl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Beige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buickgmc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burgundy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charcoal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claret</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cran Berry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dahlia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Grey Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Grey White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep Cardinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ebony Slate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellowship Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heritage Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illustrious Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Themeold__c</fullName>
        <inlineHelpText>If the dealership would like a custom theme, please attach the image they would like to use.</inlineHelpText>
        <label>Theme-old</label>
        <picklist>
            <controllingField>Designold__c</controllingField>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Pattern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_10_Geography__c</fullName>
        <label>Top 10 Geographies/Major Cities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_Pages__c</fullName>
        <label>Top Pages</label>
        <picklist>
            <picklistValues>
                <fullName>A list of top trafficked pages was provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A list of top trafficked pages was not provided.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traffic_Notes__c</fullName>
        <label>Traffic Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Used_Car_Count__c</fullName>
        <label>Used Car Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIN_DMS__c</fullName>
        <inlineHelpText>Sample VIN from their DMS to test connection.</inlineHelpText>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Promo__c</fullName>
        <label>Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is required if the order is an Upgrade of an existing website.</inlineHelpText>
        <label>WebID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>WebID__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Recaps</relationshipLabel>
        <relationshipName>Recaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webid_Text__c</fullName>
        <inlineHelpText>This field is only to be used by IFS when a Webid does not already exist.  If a webid does exist, please use the lookup.  If not, please wait for IFS to assign one.</inlineHelpText>
        <label>Webid Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website_Primary_Brand__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Website Primary Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maserati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Inventory_Source__c</fullName>
        <label>3rd Party Inventory Source</label>
        <picklist>
            <picklistValues>
                <fullName>FTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Upload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Lead_Routing_Address__c</fullName>
        <label>3rd Party Lead Routing Address</label>
        <type>Email</type>
    </fields>
    <label>Recap</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active_Owner2__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dealer_Group_Affiliation__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SOS_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Complete</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group_Affiliation__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SOS_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Complete</value>
        </filters>
        <label>7-Closed - Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Incomplete</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group_Affiliation__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SOS_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Incomplete</value>
        </filters>
        <filters>
            <field>Cancel_Recap__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>8-Closed - Incomplete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IFS_Website_Recaps</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Recap_Project__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>2-IFS - Website Recaps</label>
        <language>en_US</language>
        <queue>IFS_Website_Recaps</queue>
    </listViews>
    <listViews>
        <fullName>Recap_Complete</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group_Affiliation__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SOS_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Recap Complete</value>
        </filters>
        <label>6-Recaps Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Started_Working</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group_Affiliation__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SOS_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Started - Working</value>
        </filters>
        <label>1-Started - Working</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>With_IFS_Booked</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group_Affiliation__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SOS_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>With IFS - Booked</value>
        </filters>
        <label>4-With IFS - Booked</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>With_IFS_Starting</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group_Affiliation__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SOS_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>With IFS - Starting</value>
        </filters>
        <label>3-With IFS - Starting</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>With_IFS_Working</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group_Affiliation__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SOS_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>With IFS - Working</value>
        </filters>
        <label>5-With IFS - Working</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Recap ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recaps</pluralLabel>
    <recordTypes>
        <fullName>FFF_Recap</fullName>
        <active>true</active>
        <description>To be used by PreSales Team only per Johanna Kimura</description>
        <label>FFF Recap</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Recap</fullName>
        <active>true</active>
        <description>Global Recap record type for all</description>
        <label>Global Recap</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Recap_Type</fullName>
        <active>true</active>
        <label>Service Recap Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website_Recap_Type</fullName>
        <active>true</active>
        <label>Website Recap Type</label>
    </recordTypes>
</CustomObject>